hybrid-overlay-ebpf/oncache-k8s/manifests/overlay-stress/policies-0100.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0100
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.101.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.101.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0101
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.102.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.102.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0102
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.103.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.103.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0103
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.104.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.104.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0104
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.105.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.105.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0105
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.106.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.106.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0106
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.107.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.107.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0107
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.108.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.108.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0108
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.109.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.109.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0109
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.110.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.110.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0110
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.111.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.111.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0111
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.112.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.112.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0112
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.113.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.113.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0113
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.114.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.114.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0114
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.115.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.115.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0115
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.116.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.116.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0116
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.117.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.117.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0117
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.118.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.118.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0118
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.119.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.119.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0119
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.120.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.120.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
